insert background colour for timeline section - fixed white gap problem

--- a/responsive-web-design-projects/portfolio/style.css
+++ b/responsive-web-design-projects/portfolio/style.css
@@ -3,6 +3,7 @@
 :root {
     --bs-font-title: 'Raleway', sans-serif;
     --bs-base-red: #be1344;
+    --bs-background-gray: #303841;
 }
 
 html {
@@ -76,7 +77,7 @@ li:hover {
 /* ABOUT  */
 
 html, body {
-    background-color: #222C32;
+    background-color: var(--bs-background-gray) !important;
     height: 100%;
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
@@ -108,6 +109,7 @@ Main components
   padding: 2em 0;
   margin-top: 2em;
   margin-bottom: 2em;
+
 }
 #cd-timeline::before {
   content: '';
@@ -116,7 +118,7 @@ Main components
   left: 25px;
   height: 100%;
   width: 4px;
-  background: #7E57C2;
+  background: #be1344;
 }
 @media only screen and (min-width: 1170px) {
   #cd-timeline {
@@ -163,10 +165,10 @@ Main components
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  box-shadow: 0 0 0 4px #7E57C2, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 0 4px #be1344, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
 .cd-timeline-img {
-  background: #673AB7;
+  background: #720a29;
 }
 @media only screen and (min-width: 1170px) {
   .cd-timeline-img {
